<resources>
    <string name="app_name">S-Assistant</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="password">password</string>
    <string name="adm_no_lecture_id">adm_no_lecture_id</string>
    <string name="enter_your_password">enter_your_password</string>
    <string name="login">login</string>
    <string name="don_t_have_an_account">don_t_have_an_account</string>
    <string name="register">register</string>
    <string name="keep_me_logged_in">keep_me_logged_in</string>
    <string name="forgot_password">forgot_password</string>
    <string name="first_name">first_name</string>
    <string name="last_name">last_name</string>
    <string name="email_address">email_address</string>
    <string name="admission_no_lecture_id">admission_no_lecture_id</string>
    <string name="course_name">course_name</string>
    <string name="course_">course</string>
    <string name="already_have_an_account">already_have_an_account</string>
    <string name="log_in">log_in</string>
    <string name="s1">S1</string>
    <string name="student_s_score">Student\'s score</string>
</resources>
