<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="126dp"
        android:layout_marginTop="50dp"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/first_name"
        android:hint="@string/first_name"
        android:layout_width="170dp"
        android:layout_alignParentStart="true"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"

        android:ems="10"
        android:drawableStart="@drawable/ic_username"
        android:inputType="textPersonName"
        android:layout_below="@id/logo"
        android:textColor="@android:color/white"/>

    <EditText
        android:id="@+id/last_name"
        android:hint="@string/last_name"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_below="@id/logo"
        android:textColor="@android:color/white"
        android:layout_alignParentEnd="true"/>

    <EditText
        android:id="@+id/address"
        android:hint="@string/email_address"
        android:layout_width="300dp"
        android:layout_alignParentStart="true"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:drawableStart="@drawable/ic_mail"
        android:inputType="textEmailAddress"
        android:layout_below="@id/first_name"
        android:textColor="@android:color/white"/>

    <EditText
        android:id="@+id/number"
        android:hint="@string/admission_no_lecture_id"
        android:layout_width="300dp"
        android:layout_alignParentStart="true"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:drawableStart="@drawable/ic_number"
        android:inputType="number"
        android:layout_below="@id/address"
        android:textColor="@android:color/white"/>

    <EditText
        android:id="@+id/course_name"
        android:hint="@string/course_name"
        android:layout_width="170dp"
        android:layout_alignParentStart="true"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:drawableStart="@drawable/ic_course"
        android:inputType="text"
        android:layout_below="@id/number"
        android:textColor="@android:color/white"/>
    <EditText
        android:id="@+id/course_id"
        android:hint="@string/course_"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_below="@id/number"
        android:textColor="@android:color/white"
        android:layout_alignParentEnd="true"/>

    <EditText
        android:id="@+id/password"
        android:hint="@string/password"
        android:layout_width="300dp"
        android:layout_alignParentStart="true"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:drawableStart="@drawable/ic_password"
        android:inputType="textPassword"
        android:layout_below="@id/course_name"
        android:textColor="@android:color/white"/>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/register" />

    <TextView
        android:id="@+id/already"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:textColor="@android:color/white"
        android:layout_below="@id/btn_register"
        android:text="@string/already_have_an_account" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/already"
        android:layout_centerHorizontal="true"
        android:text="@string/log_in"
        android:onClick="openLogin"/>
</RelativeLayout>