<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="126dp"
        android:layout_marginTop="55dp"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:textColor="@android:color/white"
        android:layout_alignParentStart="true"
        android:text="Username: "
        android:layout_below="@id/logo"
        android:drawableStart="@drawable/ic_username"
        />

    <TextView
        android:id="@+id/pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:layout_marginTop="25dp"
        android:layout_alignParentStart="true"
        android:layout_below="@id/user"
        android:drawableStart="@drawable/ic_password"
        android:text="@string/password" />


    <EditText
        android:id="@+id/username"
        android:hint="@string/adm_no_lecture_id"
        android:layout_width="250dp"
        android:layout_toEndOf="@id/user"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_below="@id/logo"
        android:textColor="@android:color/white"/>

    <EditText
        android:id="@+id/password"
        android:hint="@string/enter_your_password"
        android:layout_width="250dp"
        android:layout_toEndOf="@id/pass"
        android:layout_height="wrap_content"
        android:layout_below="@id/username"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:textColor="@android:color/white"
        android:inputType="textPassword"  />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/checkBox"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/login" />
    <TextView
        android:id="@+id/dont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:textColor="@android:color/white"
        android:layout_below="@id/btn_login"
        android:text="@string/don_t_have_an_account" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/dont"
        android:layout_centerHorizontal="true"
        android:text="@string/register"
        android:onClick="openRegister"
        tools:ignore="OnClick" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_marginTop="30dp"
        android:layout_alignParentStart="true"
        android:text="@string/keep_me_logged_in"
        android:textColor="@android:color/white"
        />
    <TextView
        android:id="@+id/forgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:layout_marginTop="30dp"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/password"
        android:text="@string/forgot_password" />
</RelativeLayout>
